# MLinRust

./: .gitignore  Cargo.toml  README.md  note.md
examples/: 00_ndarray.rs  01_decision_tree.rs  02_logistic_regression.rs  03_linear_regression.rs  04_naive_bayes.rs  05_svm.rs  06_mlp.rs  07_knn.rs  08_kmeans.rs  README.md
src/: decision_trees.rs  lib.rs  main.rs  utils.rs
src/dataset/: car_price_dataset.rs  dataloader.rs  iris_dataset.rs  mobile_phone_price_predict.rs  mod.rs  utils.rs
src/matrix/: mod.rs  ops.rs
src/model/: decision_tree.rs  kmeans.rs  knn.rs  linear_regression.rs  logistic_regression.rs  mod.rs  naive_bayes.rs  svm.rs  utils.rs
src/model/nn/: activation.rs  criterion.rs  linear.rs  mod.rs
src/ndarray/: mod.rs  ops.rs  utils.rs
